--- a/core/templates/main.html
+++ b/core/templates/main.html
@@ -241,7 +241,7 @@
             <div class="action-buttons">
                 <button class="btn btn-danger">🗑️ Eliminar</button>
                 <a href="{% url 'cargaMasiva' %}" class="btn btn-secondary">📁 Carga Masiva</a>
-                <a href="{% url 'cargaManual' %}" class="btn btn-success">➕ Ingresar</a>
+                <a href="{% url 'carga_manual' %}" class="btn btn-success">➕ Ingresar</a>
                 <button class="btn btn-primary">✏️ Modificar</button>
             </div>
         </div>
