--- a/core/templates/welcome.html
+++ b/core/templates/welcome.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    <title>Inicio</title>
+    Inicio de sesión - NUAM
 {% endblock %}
 
 {% block styles %}
